<resources>
    <string name="app_name">TestApp</string>

    <string name="hello">Hello World</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_search">Search</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="action_add">Add</string>
    <string name="nav_home">Home</string>
    <string name="nav_library">Library</string>
    <string name="nav_office">Office</string>
    <string name="nav_others">Others</string>
    <string name="nav_about">About</string>
    <string name="nav_draver_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>

    <string-array name="colors_array">
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
    </string-array>
</resources>
